--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,16 @@ authors = ["Reza Davari <rezazzr@hotmail.com>"]
 python = "^3.8"
 numpy = "^1.22.2"
 poethepoet = "^0.12.3"
+black = "^22.1.0"
+aiohttp = "^3.8.1"
+aiohttp_cors = "^0.7.0"
+prettytable = "^3.1.1"
+matplotlib = "^3.5.1"
+tensorboard = "^2.8.0"
+Pillow = "^9.0.1"
+jupyter = "^1.0.0"
+pandas = "^1.4.1"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 
