--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ Pillow = "^9.0.1"
 jupyter = "^1.0.0"
 pandas = "^1.4.1"
 tqdm = "^4.62.3"
+seaborn = "^0.11.2"
+nb-black = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
 
